[gd_scene load_steps=5 format=3 uid="uid://bqo8j7yldcyqx"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_yvj4r"]

[sub_resource type="Gradient" id="Gradient_player"]
colors = PackedColorArray(0.4, 0.7, 1, 0.6, 0.4, 0.7, 1, 0)

[sub_resource type="Animation" id="Animation_player"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerVisual:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="CircleShape2D" id="CircleShape2D_8j5vx"]
radius = 30.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_yvj4r")

[node name="PlayerVisual" type="Node2D" parent="."]

[node name="Body" type="Polygon2D" parent="PlayerVisual"]
color = Color(0.2, 0.6, 1, 1)
polygon = PackedVector2Array(-20, -20, 20, -20, 30, 0, 20, 20, -20, 20, -30, 0)

[node name="Eyes" type="Node2D" parent="PlayerVisual"]

[node name="LeftEye" type="Polygon2D" parent="PlayerVisual/Eyes"]
position = Vector2(-8, -8)
color = Color(1, 1, 1, 1)
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)

[node name="LeftPupil" type="Polygon2D" parent="PlayerVisual/Eyes/LeftEye"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)

[node name="RightEye" type="Polygon2D" parent="PlayerVisual/Eyes"]
position = Vector2(8, -8)
color = Color(1, 1, 1, 1)
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)

[node name="RightPupil" type="Polygon2D" parent="PlayerVisual/Eyes/RightEye"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)

[node name="Glow" type="CPUParticles2D" parent="PlayerVisual"]
amount = 16
lifetime = 0.8
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 40.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color = Color(0.4, 0.7, 1, 0.3)
color_ramp = SubResource("Gradient_player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8j5vx")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 3.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource("Animation_player")

[node name="WeaponContainer" type="Node2D" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_8j5vx")

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
